[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwntools"
version = "0.1.0"
description = "Minimal pwntools-compatible toolkit for this testcase repo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["pwn", "pwntools", "exploit", "ctf", "windows", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
